--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.10.0",
     "framer-motion": "^7.2.0",
     "fuse.js": "^6.6.2",
+    "meilisearch": "^0.27.0",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
